# aion-doctrine-program

./: .gitignore  Anchor.toml  README.md
docs/: system-design.md
docs/tests/: test-guide.md
programs/aion/: Cargo.toml
programs/aion/src/: lib.rs
tests/: add_messages_from_json.ts  add_messages_to_current_page.ts  add_messages_to_multiple_doctrines.ts  initialize_doctrine.ts  initialize_system.ts  make_full_doctrine_status.ts  read_messages.ts  test_add_message_to_active_page.ts  test_page_transition_instructions.ts
